kubernetes/apps/prod/media/jellyfin/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://${HOST_JELLYFIN}.${DOMAIN}"
    gethomepage.dev/description: Jellifyn
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
    # gethomepage.dev/app: xen  # optional, may be needed if app.kubernetes.io/name != ingress metadata.name
    gethomepage.dev/name: "Jellifyn"
spec:
  entryPoints:
    - websecure
  tls:
    secretName: jellyfin.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`${HOST_JELLYFIN}.${DOMAIN}`)
      services:
        - name: jellyfin
          kind: Service
          namespace: media
          port: 8096
